data/derived/fa15/progs/unify/prog3106.ml.out
Characters 75-90:
  | hd::tl -> [(hd * i)] @ [mulByDigit i tl];;
                            ^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
